= ActiveMerchant CHANGELOG

== HEAD
* Stripe Payment Intents: Add new gateway [britth] #3290

== Version 1.97.0 (Aug 15, 2019)
* CyberSource: Add issuer `additionalData` gateway-specific field [jasonxp] #3296
* PayU Latam: Add Naranja card type [hdeters] #3299
* Adyen: Add app based 3DS requests for auth and purchase [jeremywrowe] #3298
* MercadoPago: Add Cabal card type [leila-alderman] #3295
* MONEI: Add external MPI 3DS 1 support [jimmyn] #3292
* Bambora formerly Beanstream: Pass card owner when storing tokenized cards [alexdunae] #3006
* Realex: Prevent error calculating `refund_hash` or `credit_hash` when the secret is nil [jasonxp] #3291
* Orbital: Add external MPI support for 3DS1 [pi3r] #3261
* Paymill: Add currency and amount to store requests [jasonxp] #3289
* Realex: Re-implement credit as general credit [leila-alderman] #3280
* Braintree Blue: Support for stored credentials [hdeters] #3286
* CardConnect: Move domain from gateway specific to gateway field [hdeters] #3283

== Version 1.96.0 (Jul 26, 2019)
* Bluesnap: Omit state codes for unsupported countries [therufs] #3229
* Adyen: Pass updateShopperStatement, industryUsage [curiousepic] #3233
* TransFirst Transaction Express: Fix blank address2 values [britth] #3231
* WorldPay: Add support for store method [bayprogrammer] #3232
* Adyen: Support for additional AVS code mapping [jknipp] #3236
* Adyen: Update message for AVS result code 'A' to generically cover postal code mismatches [jknipp] #3237
* CyberSource: Update CyberSource SOAP documentation link [vince-smith] #3204
* USAePay: Handle additional error codes and add default error code [estelendur] #3167
* Braintree: Add `skip_avs` and `skip_cvv` gateway specific fields [leila-alderman] #3241
* NAB Transact: Update periodic test url [mengqing] #3177
* NMI: Add level 3 gateway-specific fields tax, shipping, and ponumber [jasonxp] #3239
* Checkout V2: Update stored card flag [curiousepic] #3247