@@ -7,4 +7,5 @@ gem 'rubocop', '~> 0.60.0', require: false
 group :test, :remote_test do
   # gateway-specific dependencies, keeping these gems out of the gemspec
   gem 'braintree', '>= 2.93.0'
+  gem 'mechanize'
 end
